Compilers/New_Set/Assignment_6/y.output
Terminals unused in grammar

   STRUCT_KEYWORD
   TYPEDEF_KEYWORD
   UNION_KEYWORD
   ENUM_CONSTANT
   SINGLECOMMENT
   MULTICOMMENT
   UNARY


State 339 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 N: %empty

    2 M: %empty

    3 primary_expression: IDENTIFIER
    4                   | CHAR_CONSTANT
    5                   | INTEGER_CONSTANT
    6                   | FLOATING_CONSTANT
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 ENUMERATION_CONST: IDENTIFIER

   10 postfix_expression: primary_expression
   11                   | postfix_expression '[' expression ']'
   12                   | postfix_expression '(' argument_expression_list_opt ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression VAL_AT IDENTIFIER
   15                   | postfix_expression MINUS_MINUS
   16                   | postfix_expression PLUS_PLUS
   17                   | '(' type_name ')' '{' initializer_list ',' '}'
   18                   | '(' type_name ')' '{' initializer_list '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 argument_expression_list_opt: argument_expression_list
   22                             | %empty

   23 unary_expression: postfix_expression
   24                 | MINUS_MINUS unary_expression
   25                 | PLUS_PLUS unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF_KEYWORD unary_expression
   28                 | SIZEOF_KEYWORD '(' type_name ')'

   29 unary_operator: '~'
   30               | '!'
   31               | '+'
   32               | '-'
   33               | '&'
   34               | '*'

   35 cast_expression: unary_expression
   36                | '(' type_name ')' cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression '/' cast_expression
   39                          | multiplicative_expression '%' cast_expression
   40                          | multiplicative_expression '*' cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression '+' multiplicative_expression
   43                    | additive_expression '-' multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression LEFT_SHIFT additive_expression
   46                 | shift_expression RIGHT_SHIFT additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression LESS_EQUAL shift_expression
   49                      | relational_expression GREATER_EQUAL shift_expression
   50                      | relational_expression '<' shift_expression
   51                      | relational_expression '>' shift_expression

   52 equality_expression: relational_expression
   53                    | equality_expression EQUAL relational_expression
   54                    | equality_expression NOT_EQUAL relational_expression

   55 and_expression: equality_expression
   56               | and_expression '&' equality_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression AND M inclusive_or_expression

   59 inclusive_or_expression: exclusive_or_expression
   60                        | inclusive_or_expression '|' exclusive_or_expression

   61 exclusive_or_expression: and_expression
   62                        | exclusive_or_expression '^' and_expression

   63 logical_or_expression: logical_and_expression
   64                      | logical_or_expression OR M logical_and_expression

   65 conditional_expression: logical_or_expression
   66                       | logical_or_expression N '?' M expression N ':' M conditional_expression

   67 assignment_operator: '='
   68                    | STAR_EQUAL
   69                    | BY_EQUAL
   70                    | PERCENT_EQUAL
   71                    | PLUS_EQUAL
   72                    | MINUS_EQUAL
   73                    | AND_EQUAL
   74                    | BITWISENOT_EQUAL
   75                    | OR_EQUAL
   76                    | LEFT_SHIFT_EQUAL
   77                    | RIGHT_SHIFT_EQUAL

   78 assignment_expression: conditional_expression
   79                      | unary_expression assignment_operator assignment_expression

   80 constant_expression: conditional_expression

   81 expression: assignment_expression
   82           | expression ',' assignment_expression

   83 init_declarator_list_opt: init_declarator_list
   84                         | %empty

   85 declaration: declaration_specifiers init_declarator_list_opt ';'

   86 declaration_specifiers_opt: declaration_specifiers
   87                           | %empty

   88 declaration_specifiers: type_specifier declaration_specifiers_opt
   89                       | type_qualifier declaration_specifiers_opt
   90                       | storage_class_specifier declaration_specifiers_opt
   91                       | function_specifier declaration_specifiers_opt

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list ',' init_declarator

   94 init_declarator: declarator
   95                | declarator '=' initializer

   96 storage_class_specifier: AUTO_KEYWORD
   97                        | STATIC_KEYWORD
   98                        | EXTERN_KEYWORD
   99                        | REGISTER_KEYWORD

  100 type_specifier: VOID_KEYWORD
  101               | BOOL_KEYWORD
  102               | CHAR_KEYWORD
  103               | SHORT_KEYWORD
  104               | SIGNED_KEYWORD
  105               | UNSIGNED_KEYWORD
  106               | INT_KEYWORD
  107               | LONG_KEYWORD
  108               | FLOAT_KEYWORD
  109               | DOUBLE_KEYWORD
  110               | COMPLEX_KEYWORD
  111               | IMAGINARY_KEYWORD
  112               | enum_specifier

  113 specifier_qualifier_list_opt: specifier_qualifier_list
  114                             | %empty

  115 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  116                         | type_qualifier specifier_qualifier_list_opt

  117 identifier_opt: IDENTIFIER
  118               | %empty

  119 enumerator_list: enumerator
  120                | enumerator_list ',' enumerator

  121 enum_specifier: ENUM_KEYWORD identifier_opt '{' enumerator_list '}'
  122               | ENUM_KEYWORD identifier_opt '{' enumerator_list ',' '}'
  123               | ENUM_KEYWORD IDENTIFIER

  124 enumerator: ENUMERATION_CONST
  125           | ENUMERATION_CONST '=' constant_expression

  126 type_qualifier: RESTRICT_KEYWORD
  127               | VOLATILE_KEYWORD
  128               | CONST_KEYWORD

  129 function_specifier: INLINE_KEYWORD

  130 pointer_opt: pointer
  131            | %empty

  132 declarator: pointer_opt direct_declarator

  133 direct_declarator: IDENTIFIER
  134                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  135                  | '(' declarator ')'
  136                  | direct_declarator '(' parameter_type_list ')'
  137                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list_opt assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  139                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  140                  | direct_declarator '(' identifier_list_opt ')'

  141 type_qualifier_list_opt: type_qualifier_list
  142                        | %empty

  143 type_qualifier_list: type_qualifier
  144                    | type_qualifier_list type_qualifier

  145 identifier_list_opt: identifier_list
  146                    | %empty

  147 identifier_list: IDENTIFIER
  148                | identifier_list ',' IDENTIFIER

  149 type_name: specifier_qualifier_list

  150 initializer: assignment_expression
  151            | '{' initializer_list '}'
  152            | '{' initializer_list ',' '}'

  153 initializer_list: designation_opt initializer
  154                 | initializer_list ',' designation_opt initializer

  155 parameter_type_list: parameter_list
  156                    | parameter_list ',' ELLIPSIS

  157 parameter_list: parameter_declaration
  158               | parameter_list ',' parameter_declaration

  159 parameter_declaration: declaration_specifiers declarator
  160                      | declaration_specifiers

  161 assignment_expression_opt: assignment_expression
  162                          | %empty

  163 pointer: '*' type_qualifier_list_opt
  164        | '*' type_qualifier_list_opt pointer

  165 designation_opt: designation
  166                | %empty

  167 designation: designator_list '='

  168 designator_list: designator
  169                | designator_list designator

  170 designator: '[' constant_expression ']'
  171           | '.' IDENTIFIER

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: IDENTIFIER ':' statement
  179                  | CASE_KEYWORD constant_expression ':' statement
  180                  | DEFAULT_KEYWORD ':' statement

  181 compound_statement: '{' block_item_list_opt '}'

  182 block_item_list_opt: block_item_list
  183                    | %empty

  184 block_item_list: block_item
  185                | block_item_list M block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: expression_opt ';'

  189 expression_opt: expression
  190               | %empty

  191 selection_statement: IF_KEYWORD '(' expression N ')' M statement N ELSE_KEYWORD M statement
  192                    | IF_KEYWORD '(' expression N ')' M statement
  193                    | SWITCH_KEYWORD '(' expression ')' statement

  194 iteration_statement: DO_KEYWORD M statement WHILE_KEYWORD '(' M expression N ')' ';'
  195                    | FOR_KEYWORD '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  196                    | WHILE_KEYWORD '(' M expression N ')' M statement
  197                    | FOR_KEYWORD '(' declaration expression_opt ';' expression_opt ')' statement

  198 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  199               | CONTINUE_KEYWORD ';'
  200               | BREAK_KEYWORD ';'
  201               | RETURN_KEYWORD expression_opt ';'

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  207 declaration_list_opt: declaration_list
  208                     | %empty

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 30
'%' (37) 39
'&' (38) 33 56
'(' (40) 8 12 17 18 28 36 135 136 140 191 192 193 194 195 196 197
')' (41) 8 12 17 18 28 36 135 136 140 191 192 193 194 195 196 197
'*' (42) 34 40 139 163 164
'+' (43) 31 42
',' (44) 17 20 82 93 120 122 148 152 154 156 158
'-' (45) 32 43
'.' (46) 13 171
'/' (47) 38
':' (58) 66 178 179 180
';' (59) 85 188 194 195 197 198 199 200 201
'<' (60) 50
'=' (61) 67 95 125 167
'>' (62) 51
'?' (63) 66
'[' (91) 11 134 137 138 139 170
']' (93) 11 134 137 138 139 170
'^' (94) 62
'{' (123) 17 18 121 122 151 152 181
'|' (124) 60
'}' (125) 17 18 121 122 151 152 181
'~' (126) 29
error (256)
AUTO_KEYWORD (258) 96
RESTRICT_KEYWORD (259) 126
ENUM_KEYWORD (260) 121 122 123
BREAK_KEYWORD (261) 200
CASE_KEYWORD (262) 179
SWITCH_KEYWORD (263) 193
CONST_KEYWORD (264) 128
CONTINUE_KEYWORD (265) 199
DEFAULT_KEYWORD (266) 180
GOTO_KEYWORD (267) 198
IF_KEYWORD (268) 191 192
ELSE_KEYWORD (269) 191
EXTERN_KEYWORD (270) 98
REGISTER_KEYWORD (271) 99
VOLATILE_KEYWORD (272) 127
FOR_KEYWORD (273) 195 197
WHILE_KEYWORD (274) 194 196
DO_KEYWORD (275) 194
INLINE_KEYWORD (276) 129
DOUBLE_KEYWORD (277) 109
FLOAT_KEYWORD (278) 108
SIGNED_KEYWORD (279) 104
UNSIGNED_KEYWORD (280) 105
LONG_KEYWORD (281) 107
INT_KEYWORD (282) 106
SHORT_KEYWORD (283) 103
CHAR_KEYWORD (284) 102
VOID_KEYWORD (285) 100
BOOL_KEYWORD (286) 101
COMPLEX_KEYWORD (287) 110
IMAGINARY_KEYWORD (288) 111
RETURN_KEYWORD (289) 201
SIZEOF_KEYWORD (290) 27 28
STATIC_KEYWORD (291) 97 137 138
STRUCT_KEYWORD (292)
TYPEDEF_KEYWORD (293)
UNION_KEYWORD (294)
IDENTIFIER (295) 3 9 13 14 117 123 133 147 148 171 178 198
INTEGER_CONSTANT (296) 5
FLOATING_CONSTANT (297) 6
ENUM_CONSTANT (298)
CHAR_CONSTANT (299) 4
STRING_LITERAL (300) 7
VAL_AT (301) 14
PLUS_PLUS (302) 16 25
MINUS_MINUS (303) 15 24
LEFT_SHIFT (304) 45
RIGHT_SHIFT (305) 46
LESS_EQUAL (306) 48
GREATER_EQUAL (307) 49
EQUAL (308) 53
NOT_EQUAL (309) 54
AND (310) 58
OR (311) 64
ELLIPSIS (312) 156
STAR_EQUAL (313) 68
BY_EQUAL (314) 69
PERCENT_EQUAL (315) 70
PLUS_EQUAL (316) 71
MINUS_EQUAL (317) 72
LEFT_SHIFT_EQUAL (318) 76
RIGHT_SHIFT_EQUAL (319) 77
AND_EQUAL (320) 73
BITWISENOT_EQUAL (321) 74
OR_EQUAL (322) 75
SINGLECOMMENT (323)
MULTICOMMENT (324)
UNARY (325)


Nonterminals, with rules where they appear

$accept (95)
    on left: 0
N (96)
    on left: 1, on right: 66 191 192 194 195 196
M (97)
    on left: 2, on right: 58 64 66 185 191 192 194 195 196
primary_expression (98)
    on left: 3 4 5 6 7 8, on right: 10
ENUMERATION_CONST (99)
    on left: 9, on right: 124 125
postfix_expression (100)
    on left: 10 11 12 13 14 15 16 17 18, on right: 11 12 13 14 15 16
    23
argument_expression_list (101)
    on left: 19 20, on right: 20 21
argument_expression_list_opt (102)
    on left: 21 22, on right: 12
unary_expression (103)
    on left: 23 24 25 26 27 28, on right: 24 25 27 35 79
unary_operator (104)
    on left: 29 30 31 32 33 34, on right: 26
cast_expression (105)
    on left: 35 36, on right: 26 36 37 38 39 40
multiplicative_expression (106)
    on left: 37 38 39 40, on right: 38 39 40 41 42 43
additive_expression (107)
    on left: 41 42 43, on right: 42 43 44 45 46
shift_expression (108)
    on left: 44 45 46, on right: 45 46 47 48 49 50 51
relational_expression (109)
    on left: 47 48 49 50 51, on right: 48 49 50 51 52 53 54
equality_expression (110)
    on left: 52 53 54, on right: 53 54 55 56
and_expression (111)
    on left: 55 56, on right: 56 61 62
logical_and_expression (112)
    on left: 57 58, on right: 58 63 64
inclusive_or_expression (113)
    on left: 59 60, on right: 57 58 60
exclusive_or_expression (114)
    on left: 61 62, on right: 59 60 62
logical_or_expression (115)
    on left: 63 64, on right: 64 65 66
conditional_expression (116)
    on left: 65 66, on right: 66 78 80
assignment_operator (117)
    on left: 67 68 69 70 71 72 73 74 75 76 77, on right: 79
assignment_expression (118)
    on left: 78 79, on right: 19 20 79 81 82 137 138 150 161
constant_expression (119)
    on left: 80, on right: 125 170 179
expression (120)
    on left: 81 82, on right: 8 11 66 82 189 191 192 193 194 196
init_declarator_list_opt (121)
    on left: 83 84, on right: 85
declaration (122)
    on left: 85, on right: 186 197 205 209 210
declaration_specifiers_opt (123)
    on left: 86 87, on right: 88 89 90 91
declaration_specifiers (124)
    on left: 88 89 90 91, on right: 85 86 159 160 206
init_declarator_list (125)
    on left: 92 93, on right: 83 93
init_declarator (126)
    on left: 94 95, on right: 92 93
storage_class_specifier (127)
    on left: 96 97 98 99, on right: 90
type_specifier (128)
    on left: 100 101 102 103 104 105 106 107 108 109 110 111 112, on right:
    88 115
specifier_qualifier_list_opt (129)
    on left: 113 114, on right: 115 116
specifier_qualifier_list (130)
    on left: 115 116, on right: 113 149
identifier_opt (131)
    on left: 117 118, on right: 121 122
enumerator_list (132)
    on left: 119 120, on right: 120 121 122
enum_specifier (133)
    on left: 121 122 123, on right: 112
enumerator (134)
    on left: 124 125, on right: 119 120
type_qualifier (135)
    on left: 126 127 128, on right: 89 116 143 144
function_specifier (136)
    on left: 129, on right: 91
pointer_opt (137)
    on left: 130 131, on right: 132
declarator (138)
    on left: 132, on right: 94 95 135 159 206
direct_declarator (139)
    on left: 133 134 135 136 137 138 139 140, on right: 132 134 136
    137 138 139 140
type_qualifier_list_opt (140)
    on left: 141 142, on right: 134 137 139 163 164
type_qualifier_list (141)
    on left: 143 144, on right: 138 141 144
identifier_list_opt (142)
    on left: 145 146, on right: 140
identifier_list (143)
    on left: 147 148, on right: 145 148
type_name (144)
    on left: 149, on right: 17 18 28 36
initializer (145)
    on left: 150 151 152, on right: 95 153 154
initializer_list (146)
    on left: 153 154, on right: 17 18 151 152 154
parameter_type_list (147)
    on left: 155 156, on right: 136
parameter_list (148)
    on left: 157 158, on right: 155 156 158
parameter_declaration (149)
    on left: 159 160, on right: 157 158
assignment_expression_opt (150)
    on left: 161 162, on right: 134
pointer (151)
    on left: 163 164, on right: 130 164
designation_opt (152)
    on left: 165 166, on right: 153 154
designation (153)
    on left: 167, on right: 165
designator_list (154)
    on left: 168 169, on right: 167 169
designator (155)
    on left: 170 171, on right: 168 169
statement (156)
    on left: 172 173 174 175 176 177, on right: 178 179 180 187 191
    192 193 194 195 196 197
labeled_statement (157)
    on left: 178 179 180, on right: 172
compound_statement (158)
    on left: 181, on right: 173 206
block_item_list_opt (159)
    on left: 182 183, on right: 181
block_item_list (160)
    on left: 184 185, on right: 182 185
block_item (161)
    on left: 186 187, on right: 184 185
expression_statement (162)
    on left: 188, on right: 174
expression_opt (163)
    on left: 189 190, on right: 188 195 197 201
selection_statement (164)
    on left: 191 192 193, on right: 175
iteration_statement (165)
    on left: 194 195 196 197, on right: 176
jump_statement (166)
    on left: 198 199 200 201, on right: 177
translation_unit (167)
    on left: 202 203, on right: 0 203
external_declaration (168)
    on left: 204 205, on right: 202 203
function_definition (169)
    on left: 206, on right: 204
declaration_list_opt (170)
    on left: 207 208, on right: 206
declaration_list (171)
    on left: 209 210, on right: 207 210


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   96 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 2

  126 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 126 (type_qualifier)


State 3

  121 enum_specifier: ENUM_KEYWORD . identifier_opt '{' enumerator_list '}'
  122               | ENUM_KEYWORD . identifier_opt '{' enumerator_list ',' '}'
  123               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 118 (identifier_opt)

    identifier_opt  go to state 33


State 4

  128 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 128 (type_qualifier)


State 5

   98 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 98 (storage_class_specifier)


State 6

   99 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 99 (storage_class_specifier)


State 7

  127 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 127 (type_qualifier)


State 8

  129 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 129 (function_specifier)


State 9

  109 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 109 (type_specifier)


State 10

  108 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


State 11

  104 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


State 12

  105 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


State 13

  107 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


State 14

  106 type_specifier: INT_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


State 15

  103 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


State 16

  102 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


State 17

  100 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 18

  101 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


State 19

  110 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 110 (type_specifier)


State 20

  111 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 111 (type_specifier)


State 21

   97 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 97 (storage_class_specifier)


State 22

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


State 23

   85 declaration: declaration_specifiers . init_declarator_list_opt ';'
  206 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 34

    ';'       reduce using rule 84 (init_declarator_list_opt)
    $default  reduce using rule 131 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    pointer_opt               go to state 38
    declarator                go to state 39
    pointer                   go to state 40


State 24

   90 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 41
    declaration_specifiers      go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   88 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 43
    declaration_specifiers      go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  112 type_specifier: enum_specifier .

    $default  reduce using rule 112 (type_specifier)


State 27

   89 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 44
    declaration_specifiers      go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   91 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21

    $default  reduce using rule 87 (declaration_specifiers_opt)

    declaration_specifiers_opt  go to state 45
    declaration_specifiers      go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  203 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 46
    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


State 30

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 31

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 32

  117 identifier_opt: IDENTIFIER .
  123 enum_specifier: ENUM_KEYWORD IDENTIFIER .

    '{'       reduce using rule 117 (identifier_opt)
    $default  reduce using rule 123 (enum_specifier)


State 33

  121 enum_specifier: ENUM_KEYWORD identifier_opt . '{' enumerator_list '}'
  122               | ENUM_KEYWORD identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 48


State 34

  163 pointer: '*' . type_qualifier_list_opt
  164        | '*' . type_qualifier_list_opt pointer

    RESTRICT_KEYWORD  shift, and go to state 2
    CONST_KEYWORD     shift, and go to state 4
    VOLATILE_KEYWORD  shift, and go to state 7

    $default  reduce using rule 142 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


State 35

   85 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 52


State 36

   83 init_declarator_list_opt: init_declarator_list .
   93 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 53

    $default  reduce using rule 83 (init_declarator_list_opt)


State 37

   92 init_declarator_list: init_declarator .

    $default  reduce using rule 92 (init_declarator_list)


State 38

  132 declarator: pointer_opt . direct_declarator

    IDENTIFIER  shift, and go to state 54
    '('         shift, and go to state 55

    direct_declarator  go to state 56


State 39

   94 init_declarator: declarator .
   95                | declarator . '=' initializer
  206 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    AUTO_KEYWORD       shift, and go to state 1
    RESTRICT_KEYWORD   shift, and go to state 2
    ENUM_KEYWORD       shift, and go to state 3
    CONST_KEYWORD      shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    REGISTER_KEYWORD   shift, and go to state 6
    VOLATILE_KEYWORD   shift, and go to state 7
    INLINE_KEYWORD     shift, and go to state 8
    DOUBLE_KEYWORD     shift, and go to state 9
    FLOAT_KEYWORD      shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    UNSIGNED_KEYWORD   shift, and go to state 12
    LONG_KEYWORD       shift, and go to state 13
    INT_KEYWORD        shift, and go to state 14
    SHORT_KEYWORD      shift, and go to state 15
    CHAR_KEYWORD       shift, and go to state 16
    VOID_KEYWORD       shift, and go to state 17
    BOOL_KEYWORD       shift, and go to state 18
    COMPLEX_KEYWORD    shift, and go to state 19
    IMAGINARY_KEYWORD  shift, and go to state 20
    STATIC_KEYWORD     shift, and go to state 21
    '='                shift, and go to state 57

    '{'       reduce using rule 208 (declaration_list_opt)
    $default  reduce using rule 94 (init_declarator)
